k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yeetcard
  labels:
    app.kubernetes.io/name: yeetcard-pass-service
