k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeetcard-pass-service
  namespace: yeetcard
  labels:
    app.kubernetes.io/name: yeetcard-pass-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: yeetcard-pass-service
